[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Automating moderation on Telegram"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
TgCrypto = "^1.2.3"
Pyrogram = "^1.4.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"